Use backgroundImageFn for emoji-mart

--- a/desktop/package.json
+++ b/desktop/package.json
@@ -47,7 +47,8 @@
   "dependencies": {
     "deep-diff": "0.3.4",
     "deep-equal": "1.0.1",
-    "emoji-mart": "0.3.3",
+    "emoji-datasource": "2.4.4",
+    "emoji-mart": "marcopolo/emoji-mart#published",
     "framed-msgpack-rpc": "1.1.13",
     "getenv": "0.7.0",
     "immutable": "3.8.1",
