--- a/shared/package.json
+++ b/shared/package.json
@@ -2,6 +2,7 @@
   "name": "keybase-shared",
   "description": "Shared code for desktop and mobile clients",
   "dependencies": {
+    "core-js": "1.2.7",
     "deep-diff": "0.3.4",
     "deep-equal": "1.0.1",
     "framed-msgpack-rpc": "1.1.13",
