--- a/desktop/package.json
+++ b/desktop/package.json
@@ -47,7 +47,8 @@
   "dependencies": {
     "deep-diff": "0.3.4",
     "deep-equal": "1.0.1",
-    "emoji-mart": "0.3.3",
+    "emoji-datasource": "2.4.4",
+    "emoji-mart": "0.3.4",
     "framed-msgpack-rpc": "1.1.13",
     "getenv": "0.7.0",
     "immutable": "3.8.1",
@@ -86,6 +87,7 @@
     "babel-runtime": "6.11.6",
     "chai": "3.5.0",
     "chai-as-promised": "6.0.0",
+    "css-loader": "^0.26.0",
     "del": "2.2.2",
     "devtron": "1.4.0",
     "electron": "1.4.3",
@@ -117,6 +119,7 @@
     "redux-logger": "2.7.0",
     "shrinkpack": "0.17.1",
     "source-map-support": "0.4.5",
+    "style-loader": "^0.13.1",
     "unused-files-webpack-plugin": "3.0.0",
     "webpack": "1.13.2",
     "webpack-dashboard": "0.2.0",
