--- a/shared/package.json
+++ b/shared/package.json
@@ -6,6 +6,7 @@
     "deep-equal": "1.0.1",
     "framed-msgpack-rpc": "1.1.13",
     "getenv": "0.7.0",
+    "emoji-mart": "0.3.4",
     "immutable": "3.8.1",
     "jsonfile": "2.4.0",
     "lodash": "4.16.4",
