--- a/desktop/package.json
+++ b/desktop/package.json
@@ -45,6 +45,8 @@
   "dependencies": {
     "deep-diff": "0.3.4",
     "deep-equal": "1.0.1",
+    "emoji-datasource": "2.4.4",
+    "emoji-mart": "0.3.4",
     "electron": "1.4.8",
     "framed-msgpack-rpc": "1.1.13",
     "getenv": "0.7.0",
@@ -86,6 +88,7 @@
     "babel-runtime": "6.18.0",
     "chai": "3.5.0",
     "chai-as-promised": "6.0.0",
+    "css-loader": "^0.26.0",
     "del": "2.2.2",
     "devtron": "1.4.0",
     "electron-download": "git://github.com/keybase/electron-download#5350b5a1bad8ba7bb8c7201abe59ae3a03c3d75d",
@@ -116,7 +119,7 @@
     "redux-devtools-log-monitor": "1.1.1",
     "redux-logger": "2.7.4",
     "shrinkpack": "0.17.1",
-    "source-map-support": "0.4.6",
+    "style-loader": "^0.13.1",
     "unused-files-webpack-plugin": "3.0.0",
     "webpack": "1.13.3",
     "webpack-dashboard": "0.2.0",
@@ -128,5 +131,5 @@
   "optionalDependencies": {
     "fsevents": "1.0.15"
   },
-  "keybaseVendoredDependencies": "https://github.com/keybase/js-vendor-desktop.git#82d4a42f5d85a56b43b4d6bb95a6a640940db88f"
+  "keybaseVendoredDependencies": "https://github.com/keybase/js-vendor-desktop.git#074e6e14c34e94d753bef34978f4fec4f426647a"
 }
