--- a/circle.yml
+++ b/circle.yml
@@ -39,7 +39,7 @@ dependencies:
     # - emulator -avd circleci-android22 -no-audio -no-window:
     #    background: true
     #    parallel: true
-    - rm -rf $HOME/client/react-native/node_modules # Clear node_modules cache, it appears to be getting out of sync
+    # Maybe we dont need this with yarn - rm -rf $HOME/client/react-native/node_modules # Clear node_modules cache, it appears to be getting out of sync
     - yarn
     - yarn global react-native-cli
     - mkdir -p $GOPATH/src/github.com/keybase
