--- a/desktop/package.json
+++ b/desktop/package.json
@@ -71,8 +71,8 @@
     "babel-cli": "6.18.0",
     "babel-core": "6.18.2",
     "babel-eslint": "7.1.1",
-    "babel-loader": "6.2.8",
     "babel-jest": "17.0.2",
+    "babel-loader": "6.2.8",
     "babel-plugin-react-transform": "2.0.2",
     "babel-plugin-transform-builtin-extend": "1.1.0",
     "babel-plugin-transform-runtime": "6.15.0",
@@ -103,6 +103,7 @@
     "eslint-plugin-standard": "2.0.1",
     "express": "4.14.0",
     "file-loader": "0.9.0",
+    "flow-bin": "0.32.0",
     "fs-extra": "1.0.0",
     "jest": "17.0.3",
     "minimist": "1.2.0",
