--- a/protocol/package.json
+++ b/protocol/package.json
@@ -20,6 +20,7 @@
     "avdl-compiler": "1.3.9",
     "avdl2json": "2.2.3",
     "bluebird": "^2.10.0",
+    "camelcase": "^4.0.0",
     "iced-coffee-script": "^108.0.9",
     "iced-error": "0.0.9",
     "iced-logger": "^0.0.6",
