--- a/circle.yml
+++ b/circle.yml
@@ -41,7 +41,7 @@ dependencies:
     #    parallel: true
     # Maybe we dont need this with yarn - rm -rf $HOME/client/react-native/node_modules # Clear node_modules cache, it appears to be getting out of sync
     - yarn
-    - yarn global react-native-cli
+    - yarn global add react-native-cli
     - mkdir -p $GOPATH/src/github.com/keybase
     - ln -s $HOME/client $GOPATH/src/github.com/keybase/client
     - yarn run gobuild-android
