--- a/circle.yml
+++ b/circle.yml
@@ -26,6 +26,11 @@ dependencies:
     - sudo mv $HOME/go /usr/local
     - if ! $(grep -q "Revision=24.4.1" $ANDROID_HOME/tools/source.properties); then echo y | android update sdk -u -a -t "tools"; fi
     - if [ ! -e $ANDROID_HOME/build-tools/23.0.2 ]; then echo y | android update sdk -u -a -t "build-tools-23.0.2"; fi
+    # Install Yarn
+    - sudo apt-key adv --fetch-keys http://dl.yarnpkg.com/debian/pubkey.gpg
+    - echo "deb http://dl.yarnpkg.com/debian/ stable main" | sudo tee /etc/apt/sources.list.d/yarn.list
+    - sudo apt-get update -qq
+    - sudo apt-get install -y -qq yarn=0.17.9-1
   cache_directories:
     - /usr/local/android-sdk-linux/tools
     - /usr/local/android-sdk-linux/build-tools/23.0.2
@@ -34,13 +39,13 @@ dependencies:
     # - emulator -avd circleci-android22 -no-audio -no-window:
     #    background: true
     #    parallel: true
-    - rm -rf $HOME/client/react-native/node_modules # Clear node_modules cache, it appears to be getting out of sync
-    - npm install
-    - npm install -g react-native-cli
+    # Maybe we dont need this with yarn - rm -rf $HOME/client/react-native/node_modules # Clear node_modules cache, it appears to be getting out of sync
+    - yarn
+    - yarn global add react-native-cli
     - mkdir -p $GOPATH/src/github.com/keybase
     - ln -s $HOME/client $GOPATH/src/github.com/keybase/client
-    - npm run gobuild-android
-    - npm run sync
+    - yarn run gobuild-android
+    - yarn run sync
 test:
   override:
     # TODO(mm) uncomment these device tests (see todo above)
