--- a/desktop/package.json
+++ b/desktop/package.json
@@ -4,39 +4,35 @@
   "description": "",
   "main": "./dist/main.bundle.js",
   "scripts": {
-    "_helper": "npm run _node -- npm-helper.js",
+    "_helper": "yarn run _node -- npm-helper.js",
     "_node": "babel-node --presets es2015,stage-2 --plugins transform-flow-strip-types",
-    "apply-new-fonts": "npm run _helper apply-new-fonts",
-    "build-dev": "npm run _helper build-dev",
-    "build-main-thread": "npm run _helper build-main-thread",
-    "build-prod": "npm run _helper build-prod",
-    "build-profile": "npm run _helper build-profile",
-    "build-wpdll": "npm run _helper build-wpdll",
-    "debug-main": "npm run _helper debug-main",
-    "generate-font-project": "npm run _helper generate-font-project",
-    "help": "npm run _helper help",
-    "hot-server": "npm run build-main-thread && npm run build-wpdll && npm run hot-server-only",
-    "hot-server-only": "npm run _helper hot-server",
-    "inject-code-prod": "npm run _helper inject-code-prod",
-    "inject-sourcemaps-prod": "npm run _helper inject-sourcemaps-prod",
+    "apply-new-fonts": "yarn run _helper apply-new-fonts",
+    "build-dev": "yarn run _helper build-dev",
+    "build-main-thread": "yarn run _helper build-main-thread",
+    "build-prod": "yarn run _helper build-prod",
+    "build-profile": "yarn run _helper build-profile",
+    "build-wpdll": "yarn run _helper build-wpdll",
+    "debug-main": "yarn run _helper debug-main",
+    "generate-font-project": "yarn run _helper generate-font-project",
+    "help": "yarn run _helper help",
+    "hot-server": "yarn run build-main-thread && yarn run build-wpdll && yarn run hot-server-only",
+    "hot-server-only": "yarn run _helper hot-server",
+    "inject-code-prod": "yarn run _helper inject-code-prod",
+    "inject-sourcemaps-prod": "yarn run _helper inject-sourcemaps-prod",
     "lint": "cd .. && eslint .",
-    "local-visdiff": "npm run _helper local-visdiff",
-    "package": "npm run _helper package --",
-    "postinstall": "npm run _helper postinstall",
-    "render-screenshots": "npm run _helper render-screenshots",
-    "setup-debug-main": "npm run _helper setup-debug-main",
-    "shrinkwrap-audit": "npm run _node npm-shrinkwrap-audit",
-    "start": "npm run _helper start",
-    "start-cold": "npm run _helper start-cold",
-    "start-hot": "npm run _helper start-hot",
-    "start-hot-debug": "npm run _helper start-hot-debug",
-    "start-prod": "npm run _helper start-prod",
+    "local-visdiff": "yarn run _helper local-visdiff",
+    "package": "yarn run _helper package --",
+    "postinstall": "yarn run _helper postinstall",
+    "render-screenshots": "yarn run _helper render-screenshots",
+    "setup-debug-main": "yarn run _helper setup-debug-main",
+    "start": "yarn run _helper start",
+    "start-cold": "yarn run _helper start-cold",
+    "start-hot": "yarn run _helper start-hot",
+    "start-hot-debug": "yarn run _helper start-hot-debug",
+    "start-prod": "yarn run _helper start-prod",
     "test": "cd ../shared && jest --config=../desktop/test/jest-config.json --coverage",
-    "undiff-log": "npm run _helper undiff-log",
-    "updated-fonts": "npm run _helper updated-fonts",
-    "vendor-install": "node npm-vendor.js",
-    "vendor-update": "node npm-vendor.js update",
-    "wrap": "npm uninstall fsevents && npm prune && npm dedupe && npm shrinkwrap --dev"
+    "undiff-log": "yarn run _helper undiff-log",
+    "updated-fonts": "yarn run _helper updated-fonts"
   },
   "keywords": [],
   "author": "",
@@ -75,8 +71,8 @@
     "babel-cli": "6.18.0",
     "babel-core": "6.18.2",
     "babel-eslint": "7.1.1",
-    "babel-loader": "6.2.8",
     "babel-jest": "17.0.2",
+    "babel-loader": "6.2.8",
     "babel-plugin-react-transform": "2.0.2",
     "babel-plugin-transform-builtin-extend": "1.1.0",
     "babel-plugin-transform-runtime": "6.15.0",
@@ -107,6 +103,7 @@
     "eslint-plugin-standard": "2.0.1",
     "express": "4.14.0",
     "file-loader": "0.9.0",
+    "flow-bin": "0.32.0",
     "fs-extra": "1.0.0",
     "jest": "17.0.3",
     "minimist": "1.2.0",
@@ -118,7 +115,7 @@
     "redux-devtools-dock-monitor": "1.1.1",
     "redux-devtools-log-monitor": "1.1.1",
     "redux-logger": "2.7.4",
-    "shrinkpack": "0.17.1",
+    "source-map-support": "0.4.6",
     "style-loader": "^0.13.1",
     "unused-files-webpack-plugin": "3.0.0",
     "webpack": "1.13.3",
@@ -130,6 +127,5 @@
   },
   "optionalDependencies": {
     "fsevents": "1.0.15"
-  },
-  "keybaseVendoredDependencies": "https://github.com/keybase/js-vendor-desktop.git#074e6e14c34e94d753bef34978f4fec4f426647a"
+  }
 }
