--- a/shared/.flowconfig
+++ b/shared/.flowconfig
@@ -1,32 +1,27 @@
 [ignore]
-
 .*/node_modules/babel.*
-.*/node_modules/react/.*
+.*/node_modules/binary-extensions/.*
+.*/node_modules/builtin-modules/.*
+.*/node_modules/electron-packager/test/.*
 .*/node_modules/fbjs/.*
 .*/node_modules/is-my-json-valid/.*
 .*/node_modules/json5/.*
-.*/node_modules/binary-extensions/.*
 .*/node_modules/npm/.*
-.*/node_modules/electron-packager/test/.*
 .*/node_modules/react-tap-event-plugin/node_modules/.*
-.*/react/node_modules/.*
-../desktop/build/.*
-../desktop/release/.*
-../desktop/shared/.*
-../react-native/shared/.*
-
-
-.*/node_modules/builtin-modules/.*
-.*/node_modules/resolve/lib/.*
+.*/node_modules/react-native/.*
+.*/node_modules/react/.*
 .*/node_modules/resolve/.*
+.*/node_modules/resolve/lib/.*
 .*/node_modules/sha.js/test/.*
 .*/node_modules/spdx-exceptions/.*
 .*/node_modules/spdx-license-ids/.*
 .*/node_modules/ua-parser-js/.*
 .*/node_modules/y18n/.*
+.*/react/node_modules/.*
+./desktop/build/.*
+./desktop/release/.*
 
 [include]
-../desktop
 
 [libs]
 ./libs/flow-interface.js.flow
@@ -37,7 +32,7 @@ munge_underscores=true
 esproposal.class_static_fields=enable
 esproposal.class_instance_fields=enable
 unsafe.enable_getters_and_setters=true
-module.system.node.resolve_dirname=../desktop/node_modules
+module.system.node.resolve_dirname=./node_modules
 
 module.name_mapper='^image![a-zA-Z0-9$_-]+$' -> 'GlobalImageStub'
 module.name_mapper='^[./a-zA-Z0-9$_-]+\.\(bmp\|gif\|jpg\|jpeg\|png\|psd\|svg\|webp\|m4v\|mov\|mp4\|mpeg\|mpg\|webm\|aac\|aiff\|caf\|m4a\|mp3\|wav\|html\|pdf\)$' -> 'RelativeImageStub'
