--- a/shared/package.json
+++ b/shared/package.json
@@ -19,6 +19,7 @@
     "inject-code-prod": "yarn run _helper inject-code-prod",
     "inject-sourcemaps-prod": "yarn run _helper inject-sourcemaps-prod",
     "lint": "cd .. && eslint .",
+    "flow": "./node_modules/.bin/flow .",
     "local-visdiff": "yarn run _helper local-visdiff",
     "package": "yarn run _helper package --",
     "postinstall": "yarn run _helper postinstall",
@@ -49,32 +50,34 @@
     "core-js": "1.2.7",
     "deep-diff": "0.3.4",
     "deep-equal": "1.0.1",
+    "emoji-datasource": "2.4.4",
+    "emoji-mart": "0.3.4",
     "framed-msgpack-rpc": "1.1.13",
     "getenv": "0.7.0",
-    "emoji-mart": "0.3.4",
+    "iced-runtime": "1.0.3",
     "immutable": "3.8.1",
     "jsonfile": "2.4.0",
-    "lodash": "4.16.4",
+    "lodash": "4.17.2",
     "material-ui": "0.15.4",
     "menubar": "5.1.0",
     "mkdirp": "0.5.1",
-    "moment": "2.15.1",
+    "moment": "2.17.0",
     "purepack": "1.0.4",
     "qrcode-generator": "1.0.5",
-    "react": "15.3.2",
-    "react-addons-css-transition-group": "15.3.2",
-    "react-addons-shallow-compare": "15.3.2",
-    "react-dom": "15.3.2",
+    "react": "15.4.1",
+    "react-addons-css-transition-group": "15.4.1",
+    "react-addons-shallow-compare": "15.4.1",
+    "react-dom": "15.4.1",
     "react-list": "0.8.0",
     "react-native": "0.36.0",
     "react-native-barcodescanner": "3.1.1",
     "react-native-camera": "git://github.com/lwansbrough/react-native-camera.git#6074ec3c8275ef5eb5fc39489c9a379f6ced923b",
     "react-native-push-notification": "2.2.0",
-    "react-redux": "4.4.5",
-    "react-tap-event-plugin": "1.0.0",
-    "react-virtualized": "8.1.1",
+    "react-redux": "4.4.6",
+    "react-tap-event-plugin": "2.0.1",
+    "react-virtualized": "8.5.3",
     "redux": "3.6.0",
-    "redux-saga": "0.12.0",
+    "redux-saga": "0.13.0",
     "redux-thunk": "2.1.0",
     "semver": "5.3.0",
     "transit-immutable-js": "0.6.0",
@@ -82,63 +85,66 @@
     "util": "0.10.3"
   },
   "devDependencies": {
-    "babel-cli": "6.16.0",
-    "babel-core": "6.17.0",
-    "babel-eslint": "7.0.0",
+    "babel-cli": "6.18.0",
+    "babel-core": "6.18.2",
+    "babel-eslint": "7.1.1",
     "babel-jest": "17.0.2",
-    "babel-loader": "6.2.5",
+    "babel-loader": "6.2.8",
     "babel-plugin-react-transform": "2.0.2",
-    "babel-plugin-transform-runtime": "6.15.0",
     "babel-plugin-transform-builtin-extend": "1.1.0",
-    "babel-preset-es2015": "6.16.0",
+    "babel-plugin-transform-runtime": "6.15.0",
+    "babel-preset-es2015": "6.18.0",
     "babel-preset-react": "6.16.0",
+    "babel-preset-react-native": "1.9.0",
     "babel-preset-stage-1": "6.16.0",
-    "babel-preset-stage-2": "6.17.0",
-    "babel-runtime": "6.11.6",
+    "babel-preset-stage-2": "6.18.0",
+    "babel-runtime": "6.18.0",
     "chai": "3.5.0",
     "chai-as-promised": "6.0.0",
+    "css-loader": "^0.26.0",
     "del": "2.2.2",
     "devtron": "1.4.0",
-    "electron": "1.4.3",
+    "electron": "1.4.8",
     "electron-download": "git://github.com/keybase/electron-download#5350b5a1bad8ba7bb8c7201abe59ae3a03c3d75d",
-    "electron-packager": "8.1.0",
-    "eslint": "3.8.1",
-    "eslint-config-standard": "6.2.0",
+    "electron-packager": "8.3.0",
+    "eslint": "3.11.1",
+    "eslint-config-standard": "6.2.1",
     "eslint-config-standard-jsx": "3.2.0",
     "eslint-config-standard-react": "4.2.0",
-    "eslint-plugin-babel": "3.3.0",
+    "eslint-plugin-babel": "4.0.0",
     "eslint-plugin-filenames": "1.1.0",
-    "eslint-plugin-flowtype": "2.20.0",
-    "eslint-plugin-import": "2.0.1",
+    "eslint-plugin-flowtype": "2.28.2",
+    "eslint-plugin-import": "2.2.0",
     "eslint-plugin-mocha": "4.7.0",
-    "eslint-plugin-promise": "3.3.0",
-    "eslint-plugin-react": "6.4.1",
+    "eslint-plugin-promise": "3.4.0",
+    "eslint-plugin-react": "6.7.1",
     "eslint-plugin-standard": "2.0.1",
     "express": "4.14.0",
     "file-loader": "0.9.0",
-    "fs-extra": "0.30.0",
+    "flow-bin": "0.32.0",
+    "fs-extra": "1.0.0",
     "jest": "17.0.3",
     "minimist": "1.2.0",
-    "mocha": "3.1.2",
+    "mocha": "3.2.0",
     "null-loader": "0.1.1",
-    "react-addons-perf": "15.3.2",
+    "react-addons-perf": "15.4.1",
     "react-hot-loader": "3.0.0-beta.6",
     "redux-devtools": "3.3.1",
     "redux-devtools-dock-monitor": "1.1.1",
-    "redux-devtools-log-monitor": "1.1.0",
-    "redux-logger": "2.7.0",
-    "shrinkpack": "0.17.1",
-    "source-map-support": "0.4.5",
+    "redux-devtools-log-monitor": "1.1.1",
+    "redux-logger": "2.7.4",
+    "source-map-support": "0.4.6",
+    "style-loader": "0.13.1",
     "unused-files-webpack-plugin": "3.0.0",
-    "webpack": "1.13.2",
+    "webpack": "1.13.3",
     "webpack-dashboard": "0.2.0",
     "webpack-dev-middleware": "1.8.4",
     "webpack-dev-server": "1.16.2",
-    "webpack-hot-middleware": "2.13.0",
+    "webpack-hot-middleware": "2.13.2",
     "webpack-target-electron-renderer": "0.4.0"
   },
   "optionalDependencies": {
-    "fsevents": "1.0.14"
+    "fsevents": "1.0.15"
   },
   "keybaseVendoredDependencies": "https://github.com/keybase/js-vendor-desktop.git#18cf084298b0b3776b8d30188c1ad501c6055350"
 }
