replace npm with yarn in the Linux build

--- a/packaging/linux/arch/DOT_SRCINFO.git.in
+++ b/packaging/linux/arch/DOT_SRCINFO.git.in
@@ -9,7 +9,7 @@ pkgbase = keybase-git
 	arch = x86_64
 	license = BSD
 	makedepends = go
-	makedepends = npm
+	makedepends = yarn
 	makedepends = git
 	makedepends = rsync
 	depends = fuse
