--- a/packaging/linux/arch/PKGBUILD.git.in
+++ b/packaging/linux/arch/PKGBUILD.git.in
@@ -15,7 +15,7 @@ pkgver() {
 pkgrel=1
 arch=('i686' 'x86_64')
 depends=(fuse gconf)
-makedepends=(go npm git rsync)
+makedepends=(go yarn git rsync)
 # keybase-release is a deprecated AUR package
 conflicts=(keybase keybase-release keybase-bin)
 source=(
