--- a/shared/package.json
+++ b/shared/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.1",
   "description": "",
   "scripts": {
-    "_helper": "yarn run _node -- desktop/npm-helper.js",
+    "_helper": "yarn run _node -- desktop/yarn-helper.js",
     "_node": "babel-node --presets es2015,stage-2 --plugins transform-flow-strip-types",
     "apply-new-fonts": "yarn run _helper apply-new-fonts",
     "build-dev": "yarn run _helper build-dev",
@@ -145,6 +145,5 @@
   },
   "optionalDependencies": {
     "fsevents": "1.0.15"
-  },
-  "keybaseVendoredDependencies": "https://github.com/keybase/js-vendor-desktop.git#18cf084298b0b3776b8d30188c1ad501c6055350"
+  }
 }
