--- a/circle.yml
+++ b/circle.yml
@@ -44,7 +44,7 @@ dependencies:
     - yarn global add react-native-cli
     - mkdir -p $GOPATH/src/github.com/keybase
     - ln -s $HOME/client $GOPATH/src/github.com/keybase/client
-    - (cd .. && yarn run gobuild-android)
+    - (cd ../shared && yarn run rn-gobuild-android)
 test:
   override:
     # TODO(mm) uncomment these device tests (see todo above)
