fixes messed up cell caches when resizing and changing conversations. added react_perf to better profile

--- a/desktop/package.json
+++ b/desktop/package.json
@@ -51,7 +51,7 @@
     "material-ui": "0.15.4",
     "menubar": "5.1.0",
     "mkdirp": "0.5.1",
-    "moment": "2.17.0",
+    "moment": "2.17.1",
     "purepack": "1.0.4",
     "qrcode-generator": "1.0.5",
     "react": "15.4.1",
@@ -61,7 +61,7 @@
     "react-list": "0.8.0",
     "react-redux": "4.4.6",
     "react-tap-event-plugin": "2.0.1",
-    "react-virtualized": "8.5.3",
+    "react-virtualized": "8.7.1",
     "redux": "3.6.0",
     "redux-saga": "0.13.0",
     "redux-thunk": "2.1.0",
@@ -72,7 +72,7 @@
     "babel-core": "6.18.2",
     "babel-eslint": "7.1.1",
     "babel-jest": "17.0.2",
-    "babel-loader": "6.2.8",
+    "babel-loader": "6.2.9",
     "babel-plugin-react-transform": "2.0.2",
     "babel-plugin-transform-builtin-extend": "1.1.0",
     "babel-plugin-transform-runtime": "6.15.0",
@@ -83,10 +83,10 @@
     "babel-runtime": "6.18.0",
     "chai": "3.5.0",
     "chai-as-promised": "6.0.0",
-    "css-loader": "^0.26.0",
+    "css-loader": "0.26.0",
     "del": "2.2.2",
     "devtron": "1.4.0",
-    "electron": "1.4.8",
+    "electron": "1.4.11",
     "electron-download": "git://github.com/keybase/electron-download#5350b5a1bad8ba7bb8c7201abe59ae3a03c3d75d",
     "electron-packager": "8.3.0",
     "eslint": "3.11.1",
@@ -95,11 +95,11 @@
     "eslint-config-standard-react": "4.2.0",
     "eslint-plugin-babel": "4.0.0",
     "eslint-plugin-filenames": "1.1.0",
-    "eslint-plugin-flowtype": "2.28.2",
+    "eslint-plugin-flowtype": "2.29.1",
     "eslint-plugin-import": "2.2.0",
     "eslint-plugin-mocha": "4.7.0",
     "eslint-plugin-promise": "3.4.0",
-    "eslint-plugin-react": "6.7.1",
+    "eslint-plugin-react": "6.8.0",
     "eslint-plugin-standard": "2.0.1",
     "express": "4.14.0",
     "file-loader": "0.9.0",
@@ -116,9 +116,9 @@
     "redux-devtools-log-monitor": "1.1.1",
     "redux-logger": "2.7.4",
     "source-map-support": "0.4.6",
-    "style-loader": "^0.13.1",
+    "style-loader": "0.13.1",
     "unused-files-webpack-plugin": "3.0.0",
-    "webpack": "1.13.3",
+    "webpack": "1.14.0",
     "webpack-dashboard": "0.2.0",
     "webpack-dev-middleware": "1.8.4",
     "webpack-dev-server": "1.16.2",
