--- a/circle.yml
+++ b/circle.yml
@@ -15,7 +15,7 @@ machine:
     # Some node dependencies break without this
     CXX: g++-4.8
 general:
-  build_dir: react-native
+  build_dir: shared
 dependencies:
   pre:
     - sudo rm -rf $HOME/go* # Remove old go installation
@@ -40,11 +40,11 @@ dependencies:
     #    background: true
     #    parallel: true
     # Maybe we dont need this with yarn - rm -rf $HOME/client/react-native/node_modules # Clear node_modules cache, it appears to be getting out of sync
-    - yarn
+    - yarn install --pure-lockfile
     - yarn global add react-native-cli
     - mkdir -p $GOPATH/src/github.com/keybase
     - ln -s $HOME/client $GOPATH/src/github.com/keybase/client
-    - (cd ../shared && yarn run rn-gobuild-android)
+    - yarn run rn-gobuild-android
 test:
   override:
     # TODO(mm) uncomment these device tests (see todo above)
@@ -60,4 +60,4 @@ test:
     - (cd react-native/android && ./gradlew assembleReleaseUnsigned)
     # Upload it to appetize
     # And grep so we only reveal the public url in the CI logs
-    - PLATFORM=android PLATFORM_BUILD_PATH="android/app/build/outputs/apk/app-releaseUnsigned.apk" S3_URL="s3://kb-appbuilds/" BUILD_URL="https://s3-us-west-2.amazonaws.com/kb-appbuilds/" ./uploadApp.sh | grep -Eo "\"publicURL\":\"[^\"]*\"|APK_URL:.*$"
+    - PLATFORM=android PLATFORM_BUILD_PATH="react-native/android/app/build/outputs/apk/app-releaseUnsigned.apk" S3_URL="s3://kb-appbuilds/" BUILD_URL="https://s3-us-west-2.amazonaws.com/kb-appbuilds/" ./uploadApp.sh | grep -Eo "\"publicURL\":\"[^\"]*\"|APK_URL:.*$"
