--- a/circle.yml
+++ b/circle.yml
@@ -60,4 +60,4 @@ test:
     - (cd react-native/android && ./gradlew assembleReleaseUnsigned)
     # Upload it to appetize
     # And grep so we only reveal the public url in the CI logs
-    - PLATFORM=android PLATFORM_BUILD_PATH="react-native/android/app/build/outputs/apk/app-releaseUnsigned.apk" S3_URL="s3://kb-appbuilds/" BUILD_URL="https://s3-us-west-2.amazonaws.com/kb-appbuilds/" ./uploadApp.sh | grep -Eo "\"publicURL\":\"[^\"]*\"|APK_URL:.*$"
+    - PLATFORM=android PLATFORM_BUILD_PATH="react-native/android/app/build/outputs/apk/app-releaseUnsigned.apk" S3_URL="s3://kb-appbuilds/" BUILD_URL="https://s3-us-west-2.amazonaws.com/kb-appbuilds/" ./react-native/uploadApp.sh | grep -Eo "\"publicURL\":\"[^\"]*\"|APK_URL:.*$"
