--- a/react-native/package.json
+++ b/react-native/package.json
@@ -16,6 +16,7 @@
     "buffer": "5.0.0",
     "core-js": "1.2.7",
     "deep-diff": "0.3.4",
+    "emoji-mart": "0.3.4",
     "framed-msgpack-rpc": "1.1.13",
     "getenv": "0.7.0",
     "iced-runtime": "1.0.3",
