--- a/protocol/json/keybase1/config.json
+++ b/protocol/json/keybase1/config.json
@@ -347,6 +347,10 @@
         {
           "type": "string",
           "name": "customMessage"
+        },
+        {
+          "type": "long",
+          "name": "criticalClockSkew"
         }
       ]
     }
