--- a/protocol/json/keybase1/config.json
+++ b/protocol/json/keybase1/config.json
@@ -462,6 +462,20 @@
       "request": [],
       "response": "OutOfDateInfo",
       "doc": "Check whether the API server has told us we're out of date."
+    },
+    "waitForClient": {
+      "request": [
+        {
+          "name": "clientType",
+          "type": "ClientType"
+        },
+        {
+          "name": "timeout",
+          "type": "DurationSec"
+        }
+      ],
+      "response": "boolean",
+      "doc": "Wait for client type to connect to service."
     }
   },
   "namespace": "keybase.1"
