--- a/shared/package.json
+++ b/shared/package.json
@@ -8,6 +8,7 @@
     "framed-msgpack-rpc": "1.1.13",
     "getenv": "0.7.0",
     "emoji-mart": "0.3.4",
+    "emoji-datasource": "2.4.4",
     "immutable": "3.8.1",
     "jsonfile": "2.4.0",
     "lodash": "4.16.4",
