async inbox load (#5057)
Async in box
Misc inbox fixes

--- a/shared/.flowconfig
+++ b/shared/.flowconfig
@@ -9,6 +9,7 @@
 .*/node_modules/npm/.*
 .*/node_modules/electron-packager/test/.*
 .*/node_modules/react-tap-event-plugin/node_modules/.*
+.*/node_modules/config-chain/.*
 .*/react/node_modules/.*
 ../desktop/build/.*
 ../desktop/release/.*
