--- a/desktop/package.json
+++ b/desktop/package.json
@@ -62,10 +62,12 @@
     "react-redux": "4.4.6",
     "react-tap-event-plugin": "2.0.1",
     "react-virtualized": "8.7.1",
+    "recompose": "0.21.0",
     "redux": "3.6.0",
     "redux-saga": "0.13.0",
     "redux-thunk": "2.1.0",
-    "semver": "5.3.0"
+    "semver": "5.3.0",
+    "shallowequal": "0.2.2"
   },
   "devDependencies": {
     "babel-cli": "6.18.0",
