--- a/desktop/.babelrc
+++ b/desktop/.babelrc
@@ -1,10 +1,17 @@
 {
-  "presets": ["babel-preset-es2015", "babel-preset-stage-1", "babel-preset-react"],
+  "presets": ["react"],
   "plugins": [
-    "babel-plugin-transform-runtime",
-    "react-hot-loader/babel",
-    ["babel-plugin-transform-builtin-extend", {
-      "globals": ["Error"]
-    }]
+    "babel-plugin-transform-es2015-modules-commonjs",
+    "babel-plugin-transform-es2015-destructuring",
+    "babel-plugin-syntax-trailing-function-commas",
+    "babel-plugin-transform-object-rest-spread",
+    "babel-plugin-transform-class-constructor-call",
+    "babel-plugin-transform-class-properties",
+    "babel-plugin-transform-export-extensions",
+    "babel-plugin-transform-class-constructor-call",
+    "babel-plugin-transform-export-extensions",
+    "babel-plugin-transform-class-properties",
+    "babel-plugin-syntax-dynamic-import",
+    "babel-plugin-transform-object-rest-spread"
   ]
 }
