--- a/desktop/package.json
+++ b/desktop/package.json
@@ -75,6 +75,7 @@
     "babel-eslint": "7.1.1",
     "babel-jest": "17.0.2",
     "babel-loader": "6.2.9",
+    "babel-plugin-add-module-exports": "^0.2.1",
     "babel-plugin-react-transform": "2.0.2",
     "babel-plugin-transform-builtin-extend": "1.1.0",
     "babel-plugin-transform-runtime": "6.15.0",
