--- a/shared/package.json
+++ b/shared/package.json
@@ -5,9 +5,9 @@
     "core-js": "1.2.7",
     "deep-diff": "0.3.4",
     "deep-equal": "1.0.1",
+    "emoji-mart": "0.3.4",
     "framed-msgpack-rpc": "1.1.13",
     "getenv": "0.7.0",
-    "emoji-mart": "0.3.4",
     "immutable": "3.8.1",
     "jsonfile": "2.4.0",
     "lodash": "4.16.4",
@@ -29,11 +29,13 @@
     "react-redux": "4.4.5",
     "react-tap-event-plugin": "1.0.0",
     "react-virtualized": "8.1.1",
+    "recompose": "0.21.0",
     "redux": "3.6.0",
     "redux-logger": "2.7.0",
     "redux-saga": "0.12.0",
     "redux-thunk": "2.1.0",
     "semver": "5.3.0",
+    "shallowequal": "0.2.2",
     "transit-immutable-js": "0.6.0"
   }
 }
