--- a/shared/package.json
+++ b/shared/package.json
@@ -15,7 +15,9 @@
     "generate-font-project": "yarn run _helper generate-font-project",
     "help": "yarn run _helper help",
     "hot-server": "yarn run build-main-thread && yarn run build-wpdll && yarn run hot-server-only",
+    "hot-server-dumb": "yarn run build-main-thread && yarn run build-wpdll && yarn run hot-server-dumb-only",
     "hot-server-only": "yarn run _helper hot-server",
+    "hot-server-dumb-only": "yarn run _helper hot-server-dumb",
     "inject-code-prod": "yarn run _helper inject-code-prod",
     "inject-sourcemaps-prod": "yarn run _helper inject-sourcemaps-prod",
     "lint": "./node_modules/.bin/eslint .",
