--- a/desktop/.babelrc
+++ b/desktop/.babelrc
@@ -1,6 +1,7 @@
 {
   "presets": ["babel-preset-es2015", "babel-preset-stage-1", "babel-preset-react"],
   "plugins": [
+    "transform-flow-strip-types",
     "babel-plugin-transform-runtime",
     "react-hot-loader/babel",
     ["babel-plugin-transform-builtin-extend", {
