--- a/desktop/package.json
+++ b/desktop/package.json
@@ -78,7 +78,7 @@
     "babel-plugin-react-transform": "2.0.2",
     "babel-plugin-transform-builtin-extend": "1.1.0",
     "babel-plugin-transform-runtime": "6.15.0",
-    "babel-preset-env": "^1.1.4",
+    "babel-preset-env": "1.1.4",
     "babel-preset-es2015": "6.18.0",
     "babel-preset-react": "6.16.0",
     "babel-preset-stage-1": "6.16.0",
