--- a/shared/package.json
+++ b/shared/package.json
@@ -30,7 +30,7 @@
     "start-hot": "yarn run _helper start-hot",
     "start-hot-debug": "yarn run _helper start-hot-debug",
     "start-prod": "yarn run _helper start-prod",
-    "test": "cd ../shared && jest --config=../desktop/test/jest-config.json --coverage",
+    "test": "jest --config=desktop/test/jest-config.json --coverage",
     "undiff-log": "yarn run _helper undiff-log",
     "updated-fonts": "yarn run _helper updated-fonts",
     "vendor-install": "node yarn-vendor.js",
