fix packge json

--- a/shared/package.json
+++ b/shared/package.json
@@ -5,6 +5,7 @@
     "core-js": "1.2.7",
     "deep-diff": "0.3.4",
     "deep-equal": "1.0.1",
+    "emoji-datasource": "2.4.4",
     "emoji-mart": "0.3.4",
     "framed-msgpack-rpc": "1.1.13",
     "getenv": "0.7.0",
