--- a/shared/.eslintignore
+++ b/shared/.eslintignore
@@ -1,11 +1,12 @@
+/constants/types/flow-types-chat.js
+/constants/types/flow-types-gregor.js
+/constants/types/flow-types.js
+/constants/types/keybase-v1.js
+/coverage
 /desktop/build/**
 /desktop/dist/**
 /desktop/release/**
-/libs/immutable-interface.js
-/libs/flow-interface.js
-/node_modules
 /flow-typed/**
-/constants/types/keybase-v1.js
-/constants/types/flow-types.js
-/constants/types/flow-types-gregor.js
-/constants/types/flow-types-chat.js
+/libs/flow-interface.js
+/libs/immutable-interface.js
+/node_modules
