--- a/.gitignore
+++ b/.gitignore
@@ -41,5 +41,6 @@ shared/coverage
 shared/node_modules
 packaging/desktop/node_modules
 packaging/prerelease/node_modules
+visdiff/node_modules
 
 Keybase.app.dSYM.zip
