--- a/circle.yml
+++ b/circle.yml
@@ -27,15 +27,19 @@ dependencies:
     - ln -s $HOME/client $GOPATH/src/github.com/keybase/client
     - if ! $(grep -q "Revision=24.4.1" $ANDROID_HOME/tools/source.properties); then echo y | android update sdk -u -a -t "tools"; fi
     - if [ ! -e $ANDROID_HOME/build-tools/23.0.2 ]; then echo y | android update sdk -u -a -t "build-tools-23.0.2"; fi
+    # Install Yarn
+    - sudo apt-key adv --fetch-keys http://dl.yarnpkg.com/debian/pubkey.gpg
+    - echo "deb http://dl.yarnpkg.com/debian/ stable main" | sudo tee /etc/apt/sources.list.d/yarn.list
+    - sudo apt-get update -qq
+    - sudo apt-get install -y -qq yarn=0.17.9-1
   cache_directories:
     - /usr/local/android-sdk-linux/tools
     - /usr/local/android-sdk-linux/build-tools/23.0.2
   override:
-    - rm -rf $HOME/client/react-native/node_modules # Clear node_modules cache, it appears to be getting out of sync
-    - npm install
-    - npm install -g react-native-cli
+    - yarn install --pure-lockfile
+    - yarn global add react-native-cli
     - ln -s $HOME/kbfs $GOPATH/src/github.com/keybase/kbfs
-    - (cd $GOPATH/src/github.com/keybase/client/react-native; LOCAL_KBFS=1 npm run gobuild-android)
+    - (cd $GOPATH/src/github.com/keybase/client/shared; LOCAL_KBFS=1 yarn run rn-gobuild-android)
 test:
   override:
     # Just testing builds
