working ios w/ rn specific babelrc

--- a/shared/package.json
+++ b/shared/package.json
@@ -35,10 +35,10 @@
     "updated-fonts": "yarn run _helper updated-fonts",
     "vendor-install": "node yarn-vendor.js",
     "vendor-update": "node yarn-vendor.js update",
-    "rn-start": "BABEL_ENV='react-native' ./node_modules/react-native/packager/packager.sh",
+    "rn-start": "BABEL_ENV='react-native' ./node_modules/react-native/packager/packager.sh --resetCache",
     "rn-gobuild-ios": "./react-native/gobuild.sh ios",
     "rn-gobuild-android": "./react-native/gobuild.sh android",
-    "rn-packager-wipe-cache": "node ./react-native/wipe-cache.js",
+    "rn-packager-wipe-cache": "watchman watch-del-all && rm -rf node_modules && yarn && node ./react-native/wipe-cache.js",
     "rn-test-ios": "xcodebuild test -project ./react-native/ios/Keybase.xcodeproj -scheme 'Keybase For Test' -destination 'platform=iOS Simulator,name=iPhone 6s,OS=9.3'"
   },
   "keywords": [],
@@ -69,9 +69,9 @@
     "react-addons-shallow-compare": "15.4.1",
     "react-dom": "15.4.1",
     "react-list": "0.8.0",
-    "react-native": "0.39.2",
+    "react-native": "0.40.0",
     "react-native-barcodescanner": "3.1.1",
-    "react-native-camera": "git://github.com/lwansbrough/react-native-camera.git#6074ec3c8275ef5eb5fc39489c9a379f6ced923b",
+    "react-native-camera": "git://github.com/lwansbrough/react-native-camera.git#f035e32b30206888e13885c9276ccc19df6abd65",
     "react-native-push-notification": "2.2.1",
     "react-redux": "5.0.1",
     "react-tap-event-plugin": "2.0.1",
@@ -103,7 +103,7 @@
     "babel-runtime": "6.20.0",
     "chai": "3.5.0",
     "chai-as-promised": "6.0.0",
-    "css-loader": "^0.26.0",
+    "css-loader": "0.26.0",
     "del": "2.2.2",
     "devtron": "1.4.0",
     "electron": "1.4.12",
