--- a/shared/.babelrc
+++ b/shared/.babelrc
@@ -1,15 +1,8 @@
 {
-    "presets": ["babel-preset-es2015", "babel-preset-stage-1", "babel-preset-react"],
-    "plugins": [
-        "babel-plugin-transform-runtime",
-        "react-hot-loader/babel",
-        ["babel-plugin-transform-builtin-extend", {
-            "globals": ["Error"]
-        }]
-    ],
-    "env": {
-        "react-native": {
-          "presets": ["react-native"],
-        }
-    }
+  "presets": ["babel-preset-react-native"],
+  "plugins": [
+    ["babel-plugin-transform-builtin-extend", {
+      "globals": ["Error"]
+    }]
+  ]
 }
