--- a/shared/package.json
+++ b/shared/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "scripts": {
     "_helper": "yarn run _node -- desktop/yarn-helper.js",
-    "_node": "babel-node",
+    "_node": "BABEL_ENV=yarn babel-node",
     "apply-new-fonts": "yarn run _helper apply-new-fonts",
     "build-dev": "yarn run _helper build-dev",
     "build-main-thread": "yarn run _helper build-main-thread",
@@ -18,7 +18,7 @@
     "hot-server-only": "yarn run _helper hot-server",
     "inject-code-prod": "yarn run _helper inject-code-prod",
     "inject-sourcemaps-prod": "yarn run _helper inject-sourcemaps-prod",
-    "lint": "eslint .",
+    "lint": "./node_modules/.bin/eslint .",
     "flow": "./node_modules/.bin/flow .",
     "local-visdiff": "yarn run _helper local-visdiff",
     "package": "yarn run _helper package --",
@@ -35,7 +35,7 @@
     "updated-fonts": "yarn run _helper updated-fonts",
     "vendor-install": "node yarn-vendor.js",
     "vendor-update": "node yarn-vendor.js update",
-    "rn-start": "BABEL_ENV='react-native' ./node_modules/react-native/packager/packager.sh --resetCache",
+    "rn-start": "./node_modules/react-native/packager/packager.sh --resetCache",
     "rn-gobuild-ios": "./react-native/gobuild.sh ios",
     "rn-gobuild-android": "./react-native/gobuild.sh android",
     "rn-packager-wipe-cache": "watchman watch-del-all && rm -rf node_modules && yarn && node ./react-native/wipe-cache.js",
