--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -5,13 +5,13 @@
         entry: sh
         language: system
         files: \.js$
-        args: [-c, 'shared/node_modules/.bin/eslint .']
+        args: [-c, 'cd shared && yarn run lint']
     -   id: flow
         name: flow
         entry: sh
         language: system
         files: ''
-        args: [-c, 'cd shared && flow --ignore-version']
+        args: [-c, 'cd shared && yarn run flow']
 
 -   repo: git@github.com:keybase/pre-commit-golang.git
     sha: '04b422b4c7fabfcf586e563e54334c659e6fd189'
