--- a/shared/.eslintrc
+++ b/shared/.eslintrc
@@ -25,55 +25,56 @@
         },
     },
     "rules": {
-        "babel/func-params-comma-dangle": 0,
-        "comma-dangle": [2, "always-multiline"],
-        "filenames/match-regex": [2, "^[0-9a-z-.]+(\\.desktop|\\.native|\\.ios|\\.android)?$"],
-        "flowtype/require-valid-file-annotation": [2, "always", {"annotationStyle": "line"}],
-        "flowtype/space-after-type-colon": [2, "always"],
-        "flowtype/space-before-generic-bracket": [2, "never"],
-        "flowtype/union-intersection-spacing": [2, "always"],
-        "flowtype/generic-spacing": [2, "never"],
-        "flowtype/valid-syntax": [2],
-        "flowtype/define-flow-type": 1,
-        "flowtype/use-flow-type": 1,
-        "flowtype/delimiter-dangle": [2, "always-multiline"],
-        "flowtype/no-dupe-keys": 2,
-        "flowtype/semi": [2, "never"],
-        "flowtype/object-type-delimiter": [2, "comma"],
-        "jsx-quotes": [2, "prefer-single"],
-        "import/named": 2,
-        "import/export": 2,
-        "import/no-named-as-default": 2,
-        "import/no-named-as-default-member": 2,
-        "import/no-extraneous-dependencies": 2,
-        "import/no-mutable-exports": 2,
-        "import/imports-first": 2,
-        "import/no-duplicates": 2,
-        "no-duplicate-imports": 0,
-        "react/jsx-boolean-value": [2, "always"],
-        "react/jsx-curly-spacing": 2,
-        "react/jsx-equals-spacing": 2,
-        "react/jsx-indent": 2,
-        "react/jsx-key": 2,
-        "react/jsx-no-bind": [2, {"allowArrowFunctions": true}],
-        "react/jsx-no-duplicate-props": 2,
-        "react/jsx-no-undef": 2,
-        "react/jsx-pascal-case": 2,
-        "react/jsx-space-before-closing": 2,
-        "react/jsx-uses-react": 2,
-        "react/jsx-uses-vars": 2,
-        "react/no-danger": 2,
-        "react/no-did-mount-set-state": 2,
-        "react/no-did-update-set-state": 2,
-        "react/no-direct-mutation-state": 2,
-        "react/no-is-mounted": 2,
-        "react/no-unknown-property": 2,
-        "react/prop-types": 0,
-        "react/react-in-jsx-scope": 2,
-        "react/require-render-return": 2,
-        "standard/array-bracket-even-spacing": [2, "never"],
-        "standard/computed-property-even-spacing": [2, "never"],
-        "standard/object-curly-even-spacing": [2, "never"],
-        "strict": [2, "global"]
+        "babel/func-params-comma-dangle": "off",
+        "comma-dangle": ["error", "always-multiline"],
+        "filenames/match-regex": ["error", "^[0-9a-z-.]+(\\.desktop|\\.native|\\.ios|\\.android)?$"],
+        "flowtype/require-valid-file-annotation": ["error", "always", {"annotationStyle": "line"}],
+        "flowtype/space-after-type-colon": ["error", "always"],
+        "flowtype/space-before-generic-bracket": ["error", "never"],
+        "flowtype/union-intersection-spacing": ["error", "always"],
+        "flowtype/generic-spacing": ["error", "never"],
+        "flowtype/valid-syntax": ["error"],
+        "flowtype/define-flow-type": "error",
+        "flowtype/use-flow-type": "error",
+        "flowtype/delimiter-dangle": ["error", "always-multiline"],
+        "flowtype/no-dupe-keys": "error",
+        "flowtype/semi": ["error", "never"],
+        "flowtype/object-type-delimiter": ["error", "comma"],
+        "jsx-quotes": ["error", "prefer-single"],
+        "import/named": "error",
+        "import/export": "error",
+        "import/no-named-as-default": "error",
+        "import/no-named-as-default-member": "error",
+        "import/no-extraneous-dependencies": "error",
+        "import/no-mutable-exports": "error",
+        "import/imports-first": "error",
+        "import/no-duplicates": "error",
+        "no-duplicate-imports": "off",
+        "react/jsx-boolean-value": ["error", "always"],
+        "react/jsx-curly-spacing": "error",
+        "react/jsx-equals-spacing": "error",
+        "react/jsx-indent": "error",
+        "react/jsx-key": "error",
+        "react/jsx-no-bind": ["error", {"allowArrowFunctions": true}],
+        "react/jsx-no-duplicate-props": "error",
+        "react/jsx-no-undef": "error",
+        "react/jsx-pascal-case": "error",
+        "react/jsx-space-before-closing": "error",
+        "react/jsx-uses-react": "error",
+        "react/jsx-uses-vars": "error",
+        "react/no-danger": "error",
+        "react/no-did-mount-set-state": "error",
+        "react/no-did-update-set-state": "error",
+        "react/no-direct-mutation-state": "error",
+        "react/no-is-mounted": "error",
+        "react/no-unknown-property": "error",
+        "react/prop-types": "off",
+        "react/react-in-jsx-scope": "error",
+        "react/require-render-return": "error",
+        "standard/array-bracket-even-spacing": ["error", "never"],
+        "standard/computed-property-even-spacing": ["error", "never"],
+        "standard/object-curly-even-spacing": ["error", "never"],
+        "strict": ["error", "global"],
+        "sort-keys": ["warn", "asc", {"caseSensitive": true, "natural": false}]
     }
 }
