only errors in eslint

--- a/shared/package.json
+++ b/shared/package.json
@@ -18,7 +18,7 @@
     "hot-server-only": "yarn run _helper hot-server",
     "inject-code-prod": "yarn run _helper inject-code-prod",
     "inject-sourcemaps-prod": "yarn run _helper inject-sourcemaps-prod",
-    "lint": "./node_modules/.bin/eslint .",
+    "lint": "./node_modules/.bin/eslint --quiet .",
     "flow": "./node_modules/.bin/flow .",
     "local-visdiff": "yarn run _helper local-visdiff",
     "package": "yarn run _helper package --",
