--- a/shared/package.json
+++ b/shared/package.json
@@ -11,6 +11,7 @@
     "build-prod": "yarn run _helper build-prod",
     "build-profile": "yarn run _helper build-profile",
     "build-wpdll": "yarn run _helper build-wpdll",
+    "build-pegjs": "pegjs markdown/parser.pegjs",
     "debug-main": "yarn run _helper debug-main",
     "generate-font-project": "yarn run _helper generate-font-project",
     "help": "yarn run _helper help",
@@ -129,6 +130,7 @@
     "minimist": "1.2.0",
     "mocha": "3.2.0",
     "null-loader": "0.1.1",
+    "pegjs": "0.10.0",
     "react-addons-perf": "15.4.2",
     "react-hot-loader": "3.0.0-beta.6",
     "redux-devtools": "3.3.1",
