--- a/shared/package.json
+++ b/shared/package.json
@@ -11,7 +11,7 @@
     "build-prod": "yarn run _helper build-prod",
     "build-profile": "yarn run _helper build-profile",
     "build-wpdll": "yarn run _helper build-wpdll",
-    "build-pegjs": "pegjs markdown/parser.pegjs",
+    "build-pegjs": "yarn run _node -- markdown/generate-emoji-parser.js markdown/parser.pegjs",
     "debug-main": "yarn run _helper debug-main",
     "generate-font-project": "yarn run _helper generate-font-project",
     "help": "yarn run _helper help",
