Don't change eslintrc

--- a/shared/.eslintrc
+++ b/shared/.eslintrc
@@ -16,7 +16,7 @@
         "__SCREENSHOT__": false
     },
     "plugins": [
-        "mocha", "filenames", "babel", "flowtype"
+        "mocha", "filenames", "babel", "import", "flowtype"
     ],
     "settings": {
         "import/core-modules": [ electron, react-native ],
@@ -36,9 +36,19 @@
         "flowtype/valid-syntax": ["error"],
         "flowtype/define-flow-type": "error",
         "flowtype/use-flow-type": "error",
+        "flowtype/delimiter-dangle": ["error", "always-multiline"],
         "flowtype/no-dupe-keys": "error",
         "flowtype/semi": ["error", "never"],
+        "flowtype/object-type-delimiter": ["error", "comma"],
         "jsx-quotes": ["error", "prefer-single"],
+        "import/named": "error",
+        "import/export": "error",
+        "import/no-named-as-default": "error",
+        "import/no-named-as-default-member": "error",
+        "import/no-extraneous-dependencies": "error",
+        "import/no-mutable-exports": "error",
+        "import/imports-first": "error",
+        "import/no-duplicates": "error",
         "no-duplicate-imports": "off",
         "react/jsx-boolean-value": ["error", "always"],
         "react/jsx-curly-spacing": "error",
