update react and all non-desktop specific deps

--- a/shared/package.json
+++ b/shared/package.json
@@ -49,19 +49,19 @@
   "license": "MIT",
   "private": true,
   "dependencies": {
-    "buffer": "5.0.2",
+    "buffer": "5.0.3",
     "core-js": "2.4.1",
     "cross-env": "3.1.4",
     "deep-diff": "0.3.4",
     "deep-equal": "1.0.1",
     "emoji-datasource": "2.4.4",
-    "emoji-mart": "0.3.5",
+    "emoji-mart": "0.3.7",
     "framed-msgpack-rpc": "1.1.13",
     "getenv": "0.7.0",
     "iced-runtime": "1.0.3",
     "immutable": "3.8.1",
     "jsonfile": "2.4.0",
-    "lodash": "4.17.3",
+    "lodash": "4.17.4",
     "material-ui": "0.15.4",
     "menubar": "5.1.0",
     "mkdirp": "0.5.1",
@@ -70,22 +70,22 @@
     "qrcode-generator": "1.0.5",
     "react": "15.4.2",
     "react-addons-css-transition-group": "15.4.2",
-    "react-addons-shallow-compare": "15.4.1",
+    "react-addons-shallow-compare": "15.4.2",
     "react-dom": "15.4.2",
     "react-list": "0.8.0",
-    "react-native": "0.40.0",
-    "react-native-camera": "git://github.com/lwansbrough/react-native-camera.git#f035e32b30206888e13885c9276ccc19df6abd65",
+    "react-native": "0.41.2",
+    "react-native-camera": "0.6.0",
     "react-native-push-notification": "2.2.1",
-    "react-redux": "5.0.1",
+    "react-redux": "5.0.2",
     "react-tap-event-plugin": "2.0.1",
     "react-virtualized": "8.11.0",
-    "recompose": "0.21.2",
+    "recompose": "0.22.0",
     "redux": "3.6.0",
-    "redux-saga": "0.14.0",
-    "redux-thunk": "2.1.0",
+    "redux-saga": "0.14.3",
+    "redux-thunk": "2.2.0",
     "semver": "5.3.0",
     "shallowequal": "0.2.2",
-    "transit-immutable-js": "0.6.0",
+    "transit-immutable-js": "0.7.0",
     "transit-js": "0.8.846",
     "util": "0.10.3"
   },
@@ -112,7 +112,7 @@
     "electron": "1.4.12",
     "electron-download": "git://github.com/keybase/electron-download#5350b5a1bad8ba7bb8c7201abe59ae3a03c3d75d",
     "electron-packager": "8.3.0",
-    "eslint": "3.14.1",
+    "eslint": "3.15.0",
     "eslint-config-standard": "6.2.1",
     "eslint-config-standard-jsx": "3.2.0",
     "eslint-config-standard-react": "4.2.0",
@@ -121,13 +121,13 @@
     "eslint-plugin-flowtype": "2.30.0",
     "eslint-plugin-import": "2.2.0",
     "eslint-plugin-mocha": "4.8.0",
-    "eslint-plugin-promise": "3.4.0",
+    "eslint-plugin-promise": "3.4.1",
     "eslint-plugin-react": "6.9.0",
     "eslint-plugin-standard": "2.0.1",
-    "express": "4.14.0",
-    "file-loader": "0.9.0",
+    "express": "4.14.1",
+    "file-loader": "0.10.0",
     "flow-bin": "0.36.0",
-    "fs-extra": "1.0.0",
+    "fs-extra": "2.0.0",
     "jest": "18.1.0",
     "minimist": "1.2.0",
     "mocha": "3.2.0",
@@ -138,7 +138,7 @@
     "redux-devtools": "3.3.2",
     "redux-devtools-dock-monitor": "1.1.1",
     "redux-devtools-log-monitor": "1.2.0",
-    "redux-logger": "2.7.4",
+    "redux-logger": "2.8.1",
     "source-map-support": "0.4.11",
     "style-loader": "0.13.1",
     "unused-files-webpack-plugin": "3.0.0",
@@ -150,6 +150,6 @@
     "webpack-target-electron-renderer": "0.4.0"
   },
   "optionalDependencies": {
-    "fsevents": "1.0.15"
+    "fsevents": "1.0.17"
   }
 }
