--- a/shared/package.json
+++ b/shared/package.json
@@ -135,6 +135,10 @@
     "pegjs": "0.10.0",
     "react-addons-perf": "15.4.2",
     "react-hot-loader": "3.0.0-beta.6",
+    "reactotron-react-js": "1.6.0",
+    "reactotron-react-native": "1.6.0",
+    "reactotron-redux": "1.6.1",
+    "reactotron-redux-saga": "1.6.0",
     "redux-devtools": "3.3.2",
     "redux-devtools-dock-monitor": "1.1.1",
     "redux-devtools-log-monitor": "1.2.0",
