--- a/shared/react-native/android/settings.gradle
+++ b/shared/react-native/android/settings.gradle
@@ -3,3 +3,5 @@ rootProject.name = 'Keybase'
 include ':app', ':keybaselib'
 include ':react-native-push-notification', ':app'
 project(':react-native-push-notification').projectDir = new File(rootProject.projectDir, '../../node_modules/react-native-push-notification/android')
+include ':react-native-camera'
+project(':react-native-camera').projectDir = new File(rootProject.projectDir,   '../../node_modules/react-native-camera/android')
