kbnm: Switch host to io.keybase.kbnm
Honestly the whole concept of this domain stuff in this field is silly, we could just call it whatever we want. But following the Google examples for now.

--- a/go/kbnm/host_json.template
+++ b/go/kbnm/host_json.template
@@ -1,5 +1,5 @@
 {
-  "name": "com.keybase.kbnm",
+  "name": "io.keybase.kbnm",
   "description": "Keybase Native Messaging API",
   "path": "@@HOST_PATH@@",
   "type": "stdio",
